--- a/livres.html
+++ b/livres.html
@@ -2160,20 +2160,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 116
+    <!--Livre 116-->
     <figure>
-      <a href="https://www.amazon.fr/Bel-Ami-Guy-Maupassant/dp/2253009008/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3J711ALIGBE44&keywords=bel+ami+poche&qid=1650317364&sprefix=bel+ami+poche%2Caps%2C61&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/81JZpP+1xgL.jpg" alt="Bel-Ami" class="books" /></a>
+      <a href="https://www.amazon.fr/Women-Charles-Bukowski/dp/2264076291/ref=sr_1_6?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=KAAQHN5KIN3G&dib=eyJ2IjoiMSJ9.3SyBmo4waxUxsclXbPb_DNnepTbnm5gWaWYaFnef4Sf9PXhQ8IPA6ULRxR9Kr6bFhq33WqY1I2hTuJbxToqR5z9dNf5hGaRq3-acJMQ0Vie1NYInEprNHnbBf09kL9vNcXNYWRbBuIsCPTI8qVkp8r59a4balpjghz_HnCtQXRoNUZ5IMrG8iu_ux3ljnlEG72qG3mAbJZvqXM3mWXaur9YmqDeZtviC_i1fpL_1uDHEM6F6FI_5N3HQ5jTnB8HxHeQW8jM3TPfFBzvkAVpSE-KN3YC60jGL7IfJN-C30nw.0sJCLlzATPwChzzMshNIyWbq_HuTXUUGxZbP17RU9WY&dib_tag=se&keywords=women&qid=1724684954&sprefix=women%2Caps%2C87&sr=8-6" target="_blank"> <img
+          src="https://c.media-amazon.com/images/I/613MGQYqWcL._SL1311_.jpg" alt="Women" class="books" /></a>
       <figcaption>
-        Maupassant
+        Charles Bukowski
       </figcaption>
       <figcaption>
-        Bel-Ami
+        Women
       </figcaption>
       <figcaption>
-        3,50€
+        9,20€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
