--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 26 aout 2024
+    Mise à jour liste le 06 novembre 2024
   </p>
   <p class="dateMAJ2">
     Mise à jour prix le 21 aout 2023
