--- a/livres.html
+++ b/livres.html
@@ -5858,37 +5858,37 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/Laffaire-Alice-Crimmins-Ana%C3%AFs-Renevier/dp/2264079797/ref=sr_1_1?keywords=anais+renevier&qid=1686847732&sprefix=anais+rene%2Caps%2C77&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/71u0hbm4WYL.jpg" alt="L'affaire Alice Crimmins" class="books" /></a>
+      <a href="https://www.amazon.fr/Libert%C3%A9-M%C3%A9moires-1954-2021-Angela-Merkel/dp/2226483896/?_encoding=UTF8&pd_rd_w=HDoWT&content-id=amzn1.sym.c6c714d0-70b2-4898-816f-f82a0c2b0af5%3Aamzn1.symc.9c69961c-776f-45c4-b797-9eea1239a3fb&pf_rd_p=c6c714d0-70b2-4898-816f-f82a0c2b0af5&pf_rd_r=ZG2MCF6C6HX72P9ACRRR&pd_rd_wg=UqWIs&pd_rd_r=7251a440-7fc0-4649-893e-3d390318bcec&ref_=pd_hp_d_atf_ci_mcx_mr_ca_hp_atf_d" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71CSQXbmVNL._SL1500_.jpg" alt="L'affaire Alice Crimmins" class="books" /></a>
       <figcaption>
-        Anaïs Renevier
+        Angela Merkel
       </figcaption>
       <figcaption>
-        L'affaire Alice Crimmins
+        Liberté
       </figcaption>
       <figcaption>
-        7,50€
+        32,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
-    <!--Livre 97
+    <!--Livre 97-->
     <figure>
-      <a href="https://www.amazon.fr/Linconnu-Cleveland-Thibault-Raisse/dp/2264079800/ref=sr_1_1?keywords=l%27inconnu+de+cleveland&qid=1686847748&sprefix=l%27inconnu+de+cle%2Caps%2C77&sr=8-1"
-        target="_blank"> <img src="https://m.media-amazon.com/images/I/71sRISo4CfL.jpg" alt="L'inconnu de Cleveland" class="books" /></a>
+      <a href="https://www.amazon.fr/recherche-Ginka-Philippe-Broussard/dp/2234081807?crid=350QIT7TKLGTS&dib=eyJ2IjoiMSJ9.9vaU1oD6IG5XR1CbK2UGEQ.XHkdsUBbs5r_k-Rx4qBT7_mSEPP9q6Nwn7bFNHj96PQ&dib_tag=se&keywords=a+la+recherche+de+ginka&qid=1730899249&sprefix=a+la+recherche+de+gi%2Caps%2C96&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71n1RcuvoVL._SL1500_.jpg" alt="A LA RECHERCHE DE GINKA" class="books" /></a>
       <figcaption>
-        Thibault Raisse
+        Philippe Broussard
       </figcaption>
       <figcaption>
-        L'inconnu de Cleveland
+        A la recherche de Ginka
       </figcaption>
       <figcaption>
-        7,50€
+        21,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 98-->
     <figure>
@@ -6053,20 +6053,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100
+    <!--Livre 100-->
     <figure>
-      <a href="https://www.amazon.fr/temps-combats-Nicolas-Sarkozy/dp/2213726485/?_encoding=UTF8&pd_rd_w=badGr&content-id=amzn1.sym.b8f182d4-be82-49d2-9854-7256c7ab0049%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=b8f182d4-be82-49d2-9854-7256c7ab0049&pf_rd_r=9RVZQ7VX3876BEBWV7HY&pd_rd_wg=Bwo4k&pd_rd_r=d69bbe1b-6ade-4043-a262-c5b5f2028551&ref_=pd_gw_ci_mcx_mr_hp_atf_m" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/71D3SMQRnOL.jpg" alt="Le temps des combats" class="books" /></a>
+      <a href="https://www.amazon.fr/Limportant-cest-trois-points-management/dp/2757605321?crid=14O7PCN8E4W3I&dib=eyJ2IjoiMSJ9.w-oVq2JCSH9bGMDR-_ePKkDDs736jpwUGXHHra3YaYeVm0ypsx0uHwL9D1fjfTl4zaAj2Ko6THWKCmcjo_7R77TJpg9O7qcPzRafmguzGLkoBUWCmtLhOVET0eaoFVOqn-eo8klhShvhy3A-lwV494UDZkZedLWw4F4y9bKXqxzvPxNGFs1MiU_vnQR9Fd3-BdsjLicW9j9Itd9poAwsvgz8ivk7HlUS9ca5_QnTyV3phzcKZ0Pcirk1-K6B0yoGyvilOIn3UpwPsiv4CM52f08j7p6PD4obrMJBVeFsBgM.wNz_SGHze8nnjCZ1oNETH-Tlt47zrTGESOSLrsEnqH0&dib_tag=se&keywords=l%27important+c%27est+les+3+points&qid=1730893987&sprefix=l%27import%2Caps%2C104&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/81R5nkLGOCL._SL1500_.jpg" alt="L'important c'est les trois points" class="books" /></a>
       <figcaption>
-        Nicolas Sarkozy
+        Fabrice Bocquet
       </figcaption>
       <figcaption>
-        Le temps des combats
+        L'important c'est les trois points
       </figcaption>
       <figcaption>
-        28,00€
+        20,00€
       </figcaption>
-    </figure>-->
+    </figure>
   </div>
 
   <div class="booksLine">
@@ -6100,20 +6100,20 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99
+    <!--Livre 99-->
     <figure>
-      <a href="https://www.amazon.fr/meurtres-du-Lowcountry-Arthur-Cerf/dp/2264081953/ref=sr_1_1?crid=97PFTKW70VTX&keywords=les+meurtres+du+lowcountry&qid=1697930188&sprefix=les+meurtre%2Caps%2C89&sr=8-1" target="_blank"> <img
-          src="https://m.media-amazon.com/images/I/71c31QM4+ZL._SL1311_.jpg" alt="Les meurtres du Lowcountry" class="books" /></a>
+      <a href="https://www.amazon.fr/disparue-r%C3%A9serve-Blackfeet-Ana%C3%AFs-Renevier/dp/2264084715?crid=2HTAOQVY4LLVM&dib=eyJ2IjoiMSJ9.RuPRV7969RxAsIiOQeiI_X60aa34B9eSSi8yIldbFN0.T1VBRlYlThtk2uN2V-ozf0NwTD6uPdMdCJbWtMkR09I&dib_tag=se&keywords=la+disparue+de+la+r%C3%A9serve+blackfeet&qid=1730899135&sprefix=la+disparue%2Caps%2C111&sr=8-1" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/61r87mH6FaL._SL1310_.jpg" alt="La disparue de la réserve Blackfeet" class="books" /></a>
       <figcaption>
-        Arthur Cerf
+        Anaïs Renevier
       </figcaption>
       <figcaption>
-        Les meurtres du Lowcountry
+        La disparue de la réserve Blackfeet
       </figcaption>
       <figcaption>
-        7,50€
+        8,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100-->
     <figure>
