--- a/livres.html
+++ b/livres.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="booksLine">
-    <!--Livre 1-->
+    <!--Livre 1
     <figure>
       <a href="https://www.amazon.fr/Soci%C3%A9t%C3%A9-du-Spectacle-Guy-Debord/dp/2072779405/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1561844645&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812Cxn-3VgL.jpg"
           alt="La Société du Spectacle" class="books" /></a>
@@ -34,7 +34,7 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 2-->
     <figure>
@@ -297,7 +297,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 18-->
+    <!--Livre 18
     <figure>
       <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
@@ -310,9 +310,9 @@
       <figcaption>
         17,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 19-->
+    <!--Livre 19
     <figure>
       <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2290121843/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/51Uh9Hpk1GL.jpg" alt="Bilqiss" class="books" /></a>
       <figcaption>
@@ -324,9 +324,9 @@
       <figcaption>
         7,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 20-->
+    <!--Livre 20
     <figure>
       <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2290161179/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/51RrsAS94wL.jpg" alt="Sa Mère"
           class="books" /></a>
@@ -339,7 +339,7 @@
       <figcaption>
         7,10€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -959,7 +959,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 59-->
+    <!--Livre 59
     <figure>
       <a href="https://www.amazon.fr/M%C3%A9moires-dun-perfectionniste-Jonny-Wilkinson/dp/2290081183/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://m.media-amazon.com/images/I/611OhgTF7FL.jpg" alt="Wilkinson"
           class="books" /></a>
@@ -972,9 +972,9 @@
       <figcaption>
         8,80€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 60-->
+    <!--Livre 60
     <figure>
       <a href="https://www.amazon.fr/Dan-Carter-Autobiographie-l%C3%A9gende-Blacks/dp/2501119878/ref=pd_sim_14_3/257-8925375-7060938?_encoding=UTF8&pd_rd_i=2501119878&pd_rd_r=ba4863d5-b866-4e2f-8f86-56891c02ccc8&pd_rd_w=GL8dH&pd_rd_wg=qY751&pf_rd_p=13666dbd-eacc-4961-ae51-8b11476bba29&pf_rd_r=3KXVTV471Z9S7E4WCPX9&psc=1&refRID=3KXVTV471Z9S7E4WCPX9"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71e-ymRSskL.jpg" alt="Dan Carter" class="books" /></a>
@@ -990,7 +990,7 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -1050,7 +1050,7 @@
         Thomas Harris
       </figcaption>
       <figcaption>
-        L'autobiographie Inédite
+        Le Silecne des Agneaux
       </figcaption>
       <figcaption>
         7,70€
@@ -1124,7 +1124,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 69-->
+    <!--Livre 69
     <figure>
       <a href="https://www.amazon.fr/Quand-jeu-%C3%A9tait-%C3%A0-nous/dp/B06XNJ46BR/ref=pd_rhf_ee_p_img_8?_encoding=UTF8&psc=1&refRID=CMRSC79SAF39J9CE8C12" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81P4FLZ8Y3L.jpg"
           alt="Quand le jeu était à nous" class="books" /></a>
@@ -1137,7 +1137,7 @@
       <figcaption>
         22,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 70-->
     <figure>
@@ -1292,7 +1292,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 79-->
+    <!--Livre 79
     <figure>
       <a href="https://www.amazon.fr/Derri%C3%A8re-porte-verte-Bernard-LIONS/dp/226317463X/ref=msx_wsirn_v1_3?pd_rd_w=KBmBG&pf_rd_p=0a0d9834-bf34-40cf-870c-8760e04a32b7&pf_rd_r=TJ8W0C94D8VJAWGRRDJG&pd_rd_r=2ed4b53a-8dcb-44b2-ae20-3379c41da5fa&pd_rd_wg=1AeVK&pd_rd_i=226317463X&psc=1"
         target="_blank"> <img src="https://www.amazon.fr/images/I/41by02c4o7L.jpg" alt="Derrière la porte verte" class="books" /></a>
@@ -1305,9 +1305,9 @@
       <figcaption>
         17,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 80-->
+    <!--Livre 80
     <figure>
       <a href="https://www.amazon.fr/Ho-visto-Diego-dico-vero/dp/8830901148/ref=pd_sim_7?pd_rd_w=S2kTy&pf_rd_p=3cf56746-caca-49ca-a035-b272242b29b5&pf_rd_r=H6CRY3DD42AN22SNXY7Z&pd_rd_r=b10de34c-44da-477d-949c-3ef90b39c9d2&pd_rd_wg=1Lp3W&pd_rd_i=8830901148&psc=1"
         target="_blank"> <img src="https://www.amazon.fr/images/I/91jRW4Kla1L.jpg" alt="3000 giorni" class="books" /></a>
@@ -1320,7 +1320,7 @@
       <figcaption>
         16,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -1474,7 +1474,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 86-->
+    <!--Livre 86
     <figure>
       <a href="https://www.amazon.fr/Deux-pieds-terre-Basile-Bure/dp/2080206427/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&dchild=1&keywords=basile+de+bure&qid=1614189550&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61-R1igSvcL.jpg" alt="Deux pieds sur terre" class="books" /></a>
@@ -1487,7 +1487,7 @@
       <figcaption>
         20,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 87-->
     <figure>
@@ -1535,7 +1535,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 90-->
+    <!--Livre 90
     <figure>
       <a href="https://www.amazon.fr/leader-tranquille-Lhomme-murmure-oreilles/dp/2755626755/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=OF0V6L7MAY8V&dchild=1&keywords=le+leader+tranquille&qid=1616182023&sprefix=le+leader+tra%2Caps%2C149&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71c5jDSzmXL.jpg" alt="Le leader tranquille" class="books" /></a>
@@ -1548,7 +1548,7 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 91-->
     <figure>
@@ -1617,7 +1617,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 95-->
+    <!--Livre 95
     <figure>
       <a href="https://www.amazon.fr/STEVE-KERR-UNE-SCOTT-HOWARD-COOPER/dp/2757605070/ref=sw_img_crh_rh_hashrec_0?_encoding=UTF8&pd_rd_i=2757605070&pd_rd_w=IzKFF&pf_rd_p=2083bedf-9ab7-4a77-b88a-1462f45b9b4c&pf_rd_r=EY3AAYTA8Q0C8JSTESHC&pd_rd_r=62f843bc-6655-4c12-a804-d974aa006b8b&pd_rd_wg=fH0ZV"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81VxmEVqN-L.jpg" alt="Steve Kerr - Ma Vie" class="books" /></a>
@@ -1630,7 +1630,7 @@
       <figcaption>
         22,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 96-->
     <figure>
@@ -1796,7 +1796,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 106-->
+    <!--Livre 106
     <figure>
       <a href="https://www.amazon.fr/Carnet-rancunes-Jacques-Expert/dp/2253940232/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1650636230&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81V9592QhGL.jpg"
           alt="Le Carnet des rancunes" class="books" /></a>
@@ -1809,7 +1809,7 @@
       <figcaption>
         8,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 107-->
     <figure>
@@ -2239,7 +2239,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 113-->
+    <!--Livre 113
     <figure>
       <a href="https://www.amazon.fr/Penguin-Modern-Classics-Norman-2000-07-27/dp/B01K92ZMCE/ref=sr_1_3?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1XX6I2VUPVIW&keywords=the+fight+norman+mailer&qid=1641825418&sprefix=the+fight+%2Caps%2C167&sr=8-3"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51tCfFzRL+L.jpg" alt="The Fight" class="books" /></a>
@@ -2252,7 +2252,7 @@
       <figcaption>
         17,93€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 114-->
     <figure>
@@ -2287,7 +2287,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 116-->
+    <!--Livre 116
     <figure>
       <a href="https://www.amazon.fr/Adr%C3%A9naline-Tout-que-jamais-racont%C3%A9/dp/2080270524/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=19HRTV1GP8U91&keywords=adrenaline&qid=1650378733&sprefix=adrenaline%2Caps%2C67&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61mB3q3NkAL.jpg" alt="Adrénaline" class="books" /></a>
@@ -2300,7 +2300,7 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -2573,7 +2573,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Premi%C3%A8re-personne-Conversations-Vladimir-Poutine/dp/2955290033/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=30COX288OOODO&keywords=poutine&qid=1650420430&sprefix=poutine%2Caps%2C67&sr=8-2"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71o7UsCDKcL.jpg" alt="VLADIMIR POUTINE: Première personne" class="books" /></a>
@@ -2586,7 +2586,7 @@
       <figcaption>
         15,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -3166,7 +3166,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Landru-L%C3%A9l%C3%A9gance-assassine-Bruno-Fuligni/dp/2268104133/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1650753622&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/81HndU9ttsL.jpg" alt="Landru: L'élégance assassine" class="books" /></a>
@@ -3179,7 +3179,7 @@
       <figcaption>
         18,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
@@ -3228,7 +3228,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Scottie-Pippen-Lib%C3%A9r%C3%A9/dp/2755694459/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=KF6OQKIR1G0M&keywords=scottie+pippen&qid=1651195243&sprefix=scottie%2520pippen%2Caps%2C63&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Ot1gl9XlL.jpg" alt="Scottie Pippen - Libéré" class="books" /></a>
@@ -3241,7 +3241,7 @@
       <figcaption>
         21,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
@@ -4427,7 +4427,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/Rhapsodie-oubli%C3%A9s-Sofia-Aouine/dp/2253077461/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1FHD1Y8ZW3R23&keywords=Sofia+Aouine+-+Rhapsodie+des+oubli%C3%A9s&qid=1654193721&sprefix=sofia+aouine+-+rhapsodie+des+oubli%C3%A9s%2Caps%2C229&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91aBYnkkBqL.jpg" alt="Rhapsodie des oubliés" class="books" /></a>
@@ -4440,7 +4440,7 @@
       <figcaption>
         7,40€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -4739,7 +4739,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/LEffet-maternel-Virginie-Linhart/dp/2757887823/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21GPK6TZEB2QT&keywords=Virginie+Linhart+-+L%27effet+maternel&qid=1654193906&sprefix=val%C3%A9rie+manteau+-+le+sillon%2Caps%2C228&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61ULMD7pJSL.jpg" alt="L'Effet maternel" class="books" /></a>
@@ -4752,7 +4752,7 @@
       <figcaption>
         6,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -5162,7 +5162,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/LAffaire-Rambla-ou-fant%C3%B4me-Ranucci/dp/2266331256/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1661859968&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/51niNiH2VWL.jpg"
           alt="L'Affaire Rambla" class="books" /></a>
@@ -5175,7 +5175,7 @@
       <figcaption>
         8,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -5701,7 +5701,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Libre-r%C3%AAver-Franco-Baresi/dp/2889442209/ref=d_wsixn_inc_v1_sccl_2_43/257-0666022-3977509?pd_rd_w=O1H00&content-id=amzn1.sym.1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_p=1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_r=2TJ8MRCK5YQ3EJD0D8SQ&pd_rd_wg=FJ7wK&pd_rd_r=41bd4c19-91de-4676-8499-6a7857fa8550&pd_rd_i=2889442209&psc=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/61CAM+ubLML.jpg" alt="Libre de rêver" class="books" /></a>
@@ -5714,9 +5714,9 @@
       <figcaption>
         12,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Van-Basten-vie-v%C3%A9rit%C3%A9-Marco/dp/2263177590/ref=d_wsixn_inc_v1_sccl_2_46/257-0666022-3977509?pd_rd_w=O1H00&content-id=amzn1.sym.1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_p=1bceed01-eead-4c67-be84-2e8ba6218b0e&pf_rd_r=2TJ8MRCK5YQ3EJD0D8SQ&pd_rd_wg=FJ7wK&pd_rd_r=41bd4c19-91de-4676-8499-6a7857fa8550&pd_rd_i=2263177590&psc=1"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/710HmbnH9-L.jpg" alt="Renee Paquette cuisine" class="books" /></a>
@@ -5729,7 +5729,7 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -5793,7 +5793,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Extra-pure-Voyage-l%C3%A9conomie-coca%C3%AFne/dp/2070468577/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1686340413&sr=8-3" target="_blank"> <img src="https://m.media-amazon.com/images/I/81unsl+f8FL.jpg"
           alt="Extra pure: Voyage dans l'économie de la cocaïne" class="books" /></a>
@@ -5806,11 +5806,11 @@
       <figcaption>
         9,20€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/suis-toujours-vivant-Asaf-Hanuka/dp/2075096961/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://m.media-amazon.com/images/I/719UscW02qL.jpg" alt="Je suis toujours vivant"
           class="books" /></a>
@@ -5823,7 +5823,7 @@
       <figcaption>
         20,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -5858,7 +5858,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 100-->
+    <!--Livre 100
     <figure>
       <a href="https://www.amazon.fr/Libert%C3%A9-M%C3%A9moires-1954-2021-Angela-Merkel/dp/2226483896/?_encoding=UTF8&pd_rd_w=HDoWT&content-id=amzn1.sym.c6c714d0-70b2-4898-816f-f82a0c2b0af5%3Aamzn1.symc.9c69961c-776f-45c4-b797-9eea1239a3fb&pf_rd_p=c6c714d0-70b2-4898-816f-f82a0c2b0af5&pf_rd_r=ZG2MCF6C6HX72P9ACRRR&pd_rd_wg=UqWIs&pd_rd_r=7251a440-7fc0-4649-893e-3d390318bcec&ref_=pd_hp_d_atf_ci_mcx_mr_ca_hp_atf_d" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/71CSQXbmVNL._SL1500_.jpg" alt="L'affaire Alice Crimmins" class="books" /></a>
@@ -5871,7 +5871,7 @@
       <figcaption>
         32,00€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
   <div class="booksLine">
@@ -5970,7 +5970,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Mon-p%C3%A8re-en-doute-encore/dp/229024029X/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1691075170&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71nlaRBjwVL.jpg" alt="Mon père en doute encore"
           class="books" /></a>
@@ -5983,7 +5983,7 @@
       <figcaption>
         7,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -6002,7 +6002,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 97-->
+    <!--Livre 97
     <figure>
       <a href="https://www.amazon.fr/OLIGARQUES-CHINOIS-Ockrent-christine/dp/B0B2Z7V9VN/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1LN2ZHXEF2VO7&keywords=ockrent&qid=1692018208&sprefix=ockren%2Caps%2C115&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/6180v+iKcoL.jpg" alt="L'Empereur et les milliardaires rouges" class="books" /></a>
@@ -6018,7 +6018,7 @@
       <figcaption>
         22,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 98-->
     <figure>
@@ -6165,7 +6165,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Ce-petit-morceau-tissu-rouge/dp/234700266X/?_encoding=UTF8&pd_rd_w=a3Wuu&content-id=amzn1.sym.06035d14-c1fb-4f85-b947-a35999f228d1%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=06035d14-c1fb-4f85-b947-a35999f228d1&pf_rd_r=1MEG70V76ENN4B4ENAKY&pd_rd_wg=9i5wO&pd_rd_r=ff75a562-c30e-45a9-903d-c2cc908df144&ref_=pd_gw_ci_mcx_mr_hp_atf_m"
         target="_blank"> <img src="https://m.media-amazon.com/images/I/51jxr7NaNeL._SL1230_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
@@ -6178,7 +6178,7 @@
       <figcaption>
         18,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100
     <figure>
@@ -6291,7 +6291,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Pourquoi-nous-dormons-Matthew-WALKER/dp/2266287230/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1706011251&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/51wxIlw5BwL._SL1311_.jpg" alt="Renee Paquette cuisine" class="books" /></a>
@@ -6304,7 +6304,7 @@
       <figcaption>
         9,20€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100
     <figure>
