--- a/livres.html
+++ b/livres.html
@@ -5271,7 +5271,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Londres-Louis-Ferdinand-C%C3%A9line/dp/2073050441/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://c.media-amazon.com/images/I/81Mcc-GMIQL._SL1500_.jpg" alt="Londres"
           class="books" /></a>
@@ -5284,7 +5284,7 @@
       <figcaption>
         10,40€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -6100,7 +6100,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/disparue-r%C3%A9serve-Blackfeet-Ana%C3%AFs-Renevier/dp/2264084715?crid=2HTAOQVY4LLVM&dib=eyJ2IjoiMSJ9.RuPRV7969RxAsIiOQeiI_X60aa34B9eSSi8yIldbFN0.T1VBRlYlThtk2uN2V-ozf0NwTD6uPdMdCJbWtMkR09I&dib_tag=se&keywords=la+disparue+de+la+r%C3%A9serve+blackfeet&qid=1730899135&sprefix=la+disparue%2Caps%2C111&sr=8-1" target="_blank"> <img
           src="https://m.media-amazon.com/images/I/61r87mH6FaL._SL1310_.jpg" alt="La disparue de la réserve Blackfeet" class="books" /></a>
@@ -6113,7 +6113,7 @@
       <figcaption>
         8,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
