--- a/livres.html
+++ b/livres.html
@@ -559,7 +559,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 34-->
+    <!--Livre 34
     <figure>
       <a href="https://www.amazon.fr/Histoire-Juif-errant-Jean-dOrmesson/dp/2070385787/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=jean+d%27ormesson+histoire+du+juif+errant&qid=1559690669&s=gateway&sr=8-1" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91sd4efXQfL.jpg" alt="Histoire du Juif errant" class="books" /></a>
@@ -572,7 +572,7 @@
       <figcaption>
         10,90€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 35-->
     <figure>
@@ -5763,7 +5763,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Histoire-36-quai-orf%C3%A8vres-Nouvelle/dp/237254280X/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1685276025&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/91EmxHZf57L.jpg"
           alt="Histoire du 36 Quai des Orfèvres" class="books" /></a>
@@ -5776,7 +5776,7 @@
       <figcaption>
         21,50€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99-->
     <figure>
@@ -6227,7 +6227,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Livre 99-->
+    <!--Livre 99
     <figure>
       <a href="https://www.amazon.fr/Nouvelles-Chroniques-dun-m%C3%A9decin-l%C3%A9giste/dp/2266219138/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
           src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/61EGDZfDXBL._SL1311_.jpg" alt="Les Nouvelles Chroniques d'un médecin légiste" class="books" /></a>
@@ -6243,7 +6243,7 @@
       <figcaption>
         7,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 100-->
     <figure>
@@ -6277,7 +6277,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98-->
+    <!--Livre 98
     <figure>
       <a href="https://www.amazon.fr/Hors-moi-Yann-Moix/dp/2382921455/ref=sr_1_3?qid=1706399284" target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/61pDyn4E6zL._SL1200_.jpg" alt="Hors de moi" class="books" /></a>
       <figcaption>
@@ -6289,7 +6289,7 @@
       <figcaption>
         32,00€
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Livre 99
     <figure>
