--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour liste le 30 décembre 2024
+    Mise à jour liste le 09 janvier 2025
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 21 aout 2023
+    Mise à jour prix : la flemme
   </p>
 
 </body>
