--- a/livres.html
+++ b/livres.html
@@ -21,20 +21,20 @@
   </navbar>
 
   <div class="booksLine">
-    <!--Livre 1
+    <!--Livre 1-->
     <figure>
-      <a href="https://www.amazon.fr/Soci%C3%A9t%C3%A9-du-Spectacle-Guy-Debord/dp/2072779405/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1561844645&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812Cxn-3VgL.jpg"
-          alt="La Société du Spectacle" class="books" /></a>
+      <a href="https://www.amazon.fr/Lidentit%C3%A9-malheureuse-Alain-Finkielkraut/dp/2070458709/ref=tmm_mmp_swatch_0?_encoding=UTF8&dib_tag=se&dib=eyJ2IjoiMSJ9.orCDrLB6YgKpdzdG8BdFXeJ-_t_-Hl5ULimZH1eMNxobln6kvKwtvb1IIl9s1BkEgDbeoW2ekl4gQZuzO1TprocYdPoFPos2FQC4EHORkLQPCHrYEm1EKMQjBa-6FMIzAuYizzhTdNjI0z3z6w_Ai8ExXX-PnNqHpAgutfSpXDg.b_mwsUQzCdr2lUZAOJeHwSM-kkgvdXz1snVks4ZhHwo&qid=1736340754&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/917ieHUaSXL._SL1500_.jpg"
+          alt="L'identité malheureuse" class="books" /></a>
       <figcaption>
-        Guy Debord
+        Alain Finkielkraut
       </figcaption>
       <figcaption>
-        La Société du Spectacle
+        L'identité malheureuse
       </figcaption>
       <figcaption>
-        7,50€
+        8,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 2-->
     <figure>
@@ -166,7 +166,7 @@
 
     <!--Livre 10-->
     <figure>
-      <a href="https://www.amazon.fr/Itin%C3%A9raire-dun-avocat-hors-norme/dp/275567007X/?_encoding=UTF8&pd_rd_w=a3Wuu&content-id=amzn1.sym.06035d14-c1fb-4f85-b947-a35999f228d1%3Aamzn1.symc.adba8a53-36db-43df-a081-77d28e1b71e6&pf_rd_p=06035d14-c1fb-4f85-b947-a35999f228d1&pf_rd_r=1MEG70V76ENN4B4ENAKY&pd_rd_wg=9i5wO&pd_rd_r=ff75a562-c30e-45a9-903d-c2cc908df144&ref_=pd_gw_ci_mcx_mr_hp_atf_m"
+      <a href="https://www.amazon.fr/Itin%C3%A9raire-dun-avocat-hors-norme/dp/2755678127/ref=tmm_mmp_swatch_0?_encoding=UTF8&sr="
         target="_blank"> <img src="https://m.media-amazon.com/images/I/81AZ05xRcsL._SL1500_.jpg" alt="Itinéraire d'un avocat" class="books" /></a>
       <figcaption>
         Randall Schwerdorffer
@@ -178,7 +178,7 @@
         hors norme
       </figcaption>
       <figcaption>
-        19,95€
+        7,90€
       </figcaption>
     </figure>
 
@@ -297,34 +297,34 @@
       </figcaption>
     </figure>
 
-    <!--Livre 18
+    <!--Livre 18-->
     <figure>
-      <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+      <a href="https://www.amazon.fr/loi-juste-Pour-morales-dictent/dp/2755678046/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=SYV2JSUAMBJM&dib=eyJ2IjoiMSJ9.hRivgtYmWIKwPjCf46jURxvJiTxMf_gMnI4-GTo_BcCD1qC74t2tpy-VHM040ZNoSqcMH7S72fKcHsgsJ3OliDzGzFeRIGJuU2RWVWEokdI.rBJhqgUd08owA70tvFhfxA6uDLQe2WAeb4wfYIMyJ3E&dib_tag=se&keywords=la+loi+juste+la+loi+pas+la+morale&nsdOptOutParam=true&qid=1736340720&sprefix=la+loi+juste+la+loi+pas+la+moral%2Caps%2C89&sr=8-1"
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/71-n3ngBf9L._SL1500_.jpg" alt="La loi, juste la loi !" class="books" /></a>
       <figcaption>
-        Saphia Azzeddine
+        Randall Schwerdorffer
       </figcaption>
       <figcaption>
-        Combien veux-tu m'épouser ?
+        La loi, juste la loi !
       </figcaption>
       <figcaption>
-        17,90€
+        19,95€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Livre 19
+    <!--Livre 19-->
     <figure>
-      <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2290121843/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://m.media-amazon.com/images/I/51Uh9Hpk1GL.jpg" alt="Bilqiss" class="books" /></a>
+      <a href="https://www.amazon.fr/m%C3%A9moire-sefface-Quelques-propos-maritimes/dp/2749179300/ref=sr_1_1?crid=VB07ZQVB2OT0&dib=eyJ2IjoiMSJ9.ZGHwSLbeH_yILv3U8Ad0kRZd2oD8EwTeIqwOVZIz9GjQiUmE95Ext-U0Qf7ZTG9z45i89Ll6eW3OJ_6JSluqAsm4xWFvZuqFk3lkebUiDwx-h5JG1rdsUB4RDiT4LKTRtVa8Ne1UtAoyX3EO-FKRLg.uiSh2n-ElnPCXfE74UOEWEDrUc4UP7A26gVCAn4BHc8&dib_tag=se&keywords=avant+que+la+m%C3%A9moire+s%27efface&nsdOptOutParam=true&qid=1736340652&sprefix=avant+que+la+m%2Caps%2C131&sr=8-1" target="_blank"> <img src="https://m.media-amazon.com/images/I/71UXEsjmU9L._SL1200_.jpg" alt="Avant que la mémoire s'efface" class="books" /></a>
       <figcaption>
-        Saphia Azzeddine
+        Olivier de Kersauson
       </figcaption>
       <figcaption>
-        Bilqiss
+        Avant que la mémoire s'efface
       </figcaption>
       <figcaption>
-        7,20€
+        19,80€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 20
     <figure>
@@ -6212,30 +6212,30 @@
       </figcaption>
     </figure>
 
-    <!--Livre 98
+    <!--Livre 98-->
     <figure>
-      <a href="https://www.amazon.fr/Entretien-avec-cadavre-m%C3%A9decin-l%C3%A9giste/dp/2380759057/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=&sr="
-        target="_blank"> <img src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/81k5mpBl+rL._SL1500_.jpg" alt="Entretien avec un cadavre" class="books" /></a>
-      <figcaption>
-        Philippe Boxho
-      </figcaption>
-      <figcaption>
-        Entretien avec un cadavre
-      </figcaption>
-      <figcaption>
-        Rupture de stock
-      </figcaption>
-    </figure>-->
-
-    <!--Livre 99
-    <figure>
-      <a href="https://www.amazon.fr/Nouvelles-Chroniques-dun-m%C3%A9decin-l%C3%A9giste/dp/2266219138/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
-          src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/61EGDZfDXBL._SL1311_.jpg" alt="Les Nouvelles Chroniques d'un médecin légiste" class="books" /></a>
+      <a href="https://www.amazon.fr/Chroniques-m%C3%A9decin-l%C3%A9giste-Michel-SAPANET/dp/2266196545/ref=tmm_mmp_swatch_0?_encoding=UTF8&dib_tag=AUTHOR&dib=eyJ2IjoiMSJ9.pk8pEW3VuqldqT0nx70VYhtlHHbh6tW1fv-9aEYACxVKtyOhk02qRsAZ4HQEdGnyuVCrwi2pzc-Kz8D_IgVSuKwcDUiAB1ZOBaoarLT1-Qxy9URXDUgZ31X6s3eRBPV_Iz7xJMsCrs0vZ66_XA4H_oFxuYukbGjd7_ThVvwYZcgDUqEPDF6ETEcjqnxGCw65.nbzzFbkvW5JAw3KRBHs11PdJIeMmnhthnTFcs1hGjac&sr="
+        target="_blank"> <img src="https://m.media-amazon.com/images/I/61yIpbK1knL._SL1311_.jpg" alt="Chroniques d'un médecin légiste" class="books" /></a>
       <figcaption>
         Michel Sapanet
       </figcaption>
       <figcaption>
-        Les Nouvelles Chroniques
+        Chroniques d'un médecin légiste
+      </figcaption>
+      <figcaption>
+        7,00€
+      </figcaption>
+    </figure>
+
+    <!--Livre 99-->
+    <figure>
+      <a href="https://www.amazon.fr/Autres-chroniques-dun-m%C3%A9decin-l%C3%A9giste/dp/2266267868/ref=tmm_mmp_swatch_0?_encoding=UTF8&dib_tag=AUTHOR&dib=eyJ2IjoiMSJ9.pk8pEW3VuqldqT0nx70VYhtlHHbh6tW1fv-9aEYACxVKtyOhk02qRsAZ4HQEdGnyuVCrwi2pzc-Kz8D_IgVSuKwcDUiAB1ZOBaoarLT1-Qxy9URXDUgZ31X6s3eRBPV_Iz7xJMsCrs0vZ66_XA4H_oFxuYukbGjd7_ThVvwYZcgDUqEPDF6ETEcjqnxGCw65.nbzzFbkvW5JAw3KRBHs11PdJIeMmnhthnTFcs1hGjac&sr=" target="_blank"> <img
+          src="https://m.media-amazon.com/images/I/71Mr0At4dOL._SL1311_.jpg" alt="Autres chroniques d'un médecin légiste" class="books" /></a>
+      <figcaption>
+        Michel Sapanet
+      </figcaption>
+      <figcaption>
+        Autres chroniques
       </figcaption>
       <figcaption>
         d'un médecin légiste
@@ -6243,17 +6243,17 @@
       <figcaption>
         7,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 100-->
     <figure>
       <a href="https://www.amazon.fr/Autopsies-Chroniques-dun-m%C3%A9decin-l%C3%A9giste/dp/2266330489/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img
-          src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/71GKx6aiwtL._SL1311_.jpg" alt="Autopsies - Chroniques d'un médecin légiste" class="books" /></a>
+          src="https://m.media-amazon.com/images/W/MEDIAX_849526-T1/images/I/71GKx6aiwtL._SL1311_.jpg" alt="Autopsies" class="books" /></a>
       <figcaption>
         Michel Sapanet
       </figcaption>
       <figcaption>
-        Chroniques d'un médecin légiste
+        Autopsies
       </figcaption>
       <figcaption>
         8,30€
